[gd_scene load_steps=33 format=3 uid="uid://8m7h0ffvx08u"]

[ext_resource type="Script" path="res://2d_particles/rainy_night.gd" id="1_p3avv"]
[ext_resource type="Material" uid="uid://d3y7erh2blmo" path="res://2d_particles/2d_sky/2d_sky_mat.tres" id="1_ypwdv"]
[ext_resource type="Script" path="res://2d_particles/camera.gd" id="2_iyhsy"]
[ext_resource type="Texture2D" uid="uid://br4gfmji1bxlb" path="res://2d_particles/assets/houses/house_1.png" id="2_ka7yi"]
[ext_resource type="Shader" path="res://2d_particles/shaders/house.gdshader" id="3_0bdhq"]
[ext_resource type="AudioStream" uid="uid://simd8bye5bot" path="res://2d_particles/assets/sounds/rain_window.ogg" id="4_1cuyv"]
[ext_resource type="Texture2D" uid="uid://ctqxl2w7mqt5o" path="res://2d_particles/assets/hills/hill_2.png" id="4_o24h5"]
[ext_resource type="Shader" path="res://2d_particles/shaders/bottom_fog.gdshader" id="5_7swb7"]
[ext_resource type="Texture2D" uid="uid://bgxb40xe6lgvh" path="res://2d_particles/assets/hills/hill_1.png" id="5_awb0c"]
[ext_resource type="Script" path="res://2d_particles/random_player.gd" id="5_cl44u"]
[ext_resource type="AudioStream" uid="uid://b6382mqgfhyr4" path="res://2d_particles/assets/sounds/lightning_strike_01.ogg" id="6_3sgfq"]
[ext_resource type="Shader" path="res://2d_particles/shaders/top_clouds.gdshader" id="6_sglpv"]
[ext_resource type="AudioStream" uid="uid://c1di7ydo6xhqo" path="res://2d_particles/assets/sounds/lightning_strike_02.ogg" id="7_fvilx"]
[ext_resource type="Texture2D" uid="uid://8h3bsf7idbnp" path="res://2d_particles/assets/houses/house_2.png" id="7_s1d1v"]
[ext_resource type="AudioStream" uid="uid://bvvhl8vvw70bu" path="res://2d_particles/assets/sounds/lightning_strike_03.ogg" id="8_2e2qv"]
[ext_resource type="Shader" path="res://2d_particles/shaders/glow.gdshader" id="8_fojyx"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_urv10"]
emission_shape = 3
emission_box_extents = Vector3(1200, 0, 1)
particle_flag_disable_z = true
direction = Vector3(0.25, 1, 0)
spread = 5.0
gravity = Vector3(0, 980, 0)
initial_velocity_min = 1000.0
initial_velocity_max = 1000.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_max = 2.0
color = Color(1, 1, 1, 0.156863)
collision_mode = 1
collision_friction = 0.5
collision_bounce = 0.25

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_sn4id"]
polygon = PackedVector2Array(-272, 448, -272, -192, -208, -336, -96, -336, -96, -384, 0, -448, 96, -384, 96, -336, 208, -336, 272, -208, 272, 448)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xj0s0"]
shader = ExtResource("3_0bdhq")
shader_parameter/wall_color = Color(0.0509804, 0.0823529, 0.0980392, 1)
shader_parameter/window_color = Color(0.129412, 0.196078, 0.219608, 1)
shader_parameter/light_color = Color(0.945098, 0.552941, 0, 0.776471)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_dbjr2"]
polygon = PackedVector2Array(-368, 0, -368, -112, -384, -112, -384, -144, -96, -144, -96, -240, -112, -240, -64, -480, 304, -480, 352, -240, 336, -240, 336, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wf54h"]
shader = ExtResource("5_7swb7")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_xenwu"]
fractal_type = 0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ckmn3"]
seamless = true
noise = SubResource("FastNoiseLite_xenwu")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_l7c56"]
seed = 10
frequency = 0.015
fractal_type = 0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ihlkl"]
seamless = true
noise = SubResource("FastNoiseLite_l7c56")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_24etk"]
shader = ExtResource("6_sglpv")
shader_parameter/base_scale = 0.2
shader_parameter/noise_sampler = SubResource("NoiseTexture2D_ckmn3")
shader_parameter/noise_small_sampler = SubResource("NoiseTexture2D_ihlkl")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_gsw1h"]
seed = 20
fractal_type = 0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_njuc7"]
seamless = true
noise = SubResource("FastNoiseLite_gsw1h")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_mvs0l"]
seed = 30
frequency = 0.015
fractal_type = 0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ajddh"]
seamless = true
noise = SubResource("FastNoiseLite_mvs0l")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vd01s"]
shader = ExtResource("6_sglpv")
shader_parameter/base_scale = 0.25
shader_parameter/noise_sampler = SubResource("NoiseTexture2D_njuc7")
shader_parameter/noise_small_sampler = SubResource("NoiseTexture2D_ajddh")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iiw28"]
shader = ExtResource("8_fojyx")

[node name="RainyNight" type="Node"]
script = ExtResource("1_p3avv")

[node name="ThunderTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.0
one_shot = true
autostart = true

[node name="World" type="Node2D" parent="."]

[node name="RainParticles" type="GPUParticles2D" parent="World"]
position = Vector2(960, -56)
amount = 200
process_material = SubResource("ParticleProcessMaterial_urv10")
lifetime = 1.5
preprocess = 4.0
visibility_rect = Rect2(-1000, 0, 2000, 1200)
trail_enabled = true
trail_lifetime = 0.1

[node name="Camera2D" type="Camera2D" parent="World"]
position = Vector2(960, 536)
script = ExtResource("2_iyhsy")

[node name="House" type="Node2D" parent="World"]
position = Vector2(1328, 960)
metadata/_edit_group_ = true

[node name="Occluder" type="LightOccluder2D" parent="World/House"]
occluder = SubResource("OccluderPolygon2D_sn4id")

[node name="House" type="Sprite2D" parent="World/House"]
material = SubResource("ShaderMaterial_xj0s0")
texture = ExtResource("2_ka7yi")

[node name="BigHouse3" type="Node2D" parent="World"]
position = Vector2(196, 1056)
metadata/_edit_group_ = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="World/BigHouse3"]
occluder = SubResource("OccluderPolygon2D_dbjr2")

[node name="House" type="Sprite2D" parent="World/BigHouse3"]
material = SubResource("ShaderMaterial_xj0s0")
texture = ExtResource("7_s1d1v")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -5

[node name="BackHill" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color(0.00392157, 0.172549, 0.235294, 1)
motion_scale = Vector2(0.7, 0.762)

[node name="Hill1" type="Sprite2D" parent="ParallaxBackground/BackHill"]
position = Vector2(982, 912.25)
scale = Vector2(1.1, 1.1)
texture = ExtResource("4_o24h5")

[node name="FrontHill" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color(0, 0.133333, 0.207843, 1)
motion_scale = Vector2(0.8, 0.871)

[node name="Hill1" type="Sprite2D" parent="ParallaxBackground/FrontHill"]
position = Vector2(982, 960.25)
scale = Vector2(1.1, 1.1)
texture = ExtResource("5_awb0c")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.9, 0.98)

[node name="BigHouse2" type="Node2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(1792, 1056)
scale = Vector2(0.75, 0.75)
metadata/_edit_group_ = true

[node name="House" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer/BigHouse2"]
material = SubResource("ShaderMaterial_xj0s0")
texture = ExtResource("7_s1d1v")

[node name="House2" type="Node2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(1008, 1024)
scale = Vector2(0.7, 0.7)
metadata/_edit_group_ = true

[node name="House" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer/House2"]
material = SubResource("ShaderMaterial_xj0s0")
texture = ExtResource("2_ka7yi")

[node name="BottomFog" type="ColorRect" parent="ParallaxBackground"]
material = SubResource("ShaderMaterial_wf54h")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 182.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.6, 0.403922, 0.188235)

[node name="Background" type="CanvasLayer" parent="."]
layer = -10

[node name="Sky" type="ColorRect" parent="Background"]
material = ExtResource("1_ypwdv")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="TopClouds" type="ColorRect" parent="TopLayer"]
material = SubResource("ShaderMaterial_24etk")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -16.0
offset_bottom = -626.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.372549, 0.376471, 0.4, 0.337255)

[node name="TopClouds2" type="ColorRect" parent="TopLayer"]
material = SubResource("ShaderMaterial_vd01s")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -72.0
offset_bottom = -898.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.215686, 0.286275, 0.34902, 1)

[node name="ThunderLight" type="ColorRect" parent="TopLayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Glow" type="ColorRect" parent="TopLayer"]
material = SubResource("ShaderMaterial_iiw28")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RainSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1cuyv")
autoplay = true

[node name="ThunderSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
script = ExtResource("5_cl44u")
sounds = Array[AudioStream]([ExtResource("6_3sgfq"), ExtResource("7_fvilx"), ExtResource("8_2e2qv")])

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
